[package]
name = "hdl-simulation-protocol"
version = "0.1.0"
authors = ["xq-Tec <info@xq-tec.com>"]
description = "Communication protocol to control HDL simulations and subscribe to simulation events"
edition = "2024"
license = "MIT"
repository = "https://github.com/xq-tec/hdl-simulation-protocol"
rust-version = "1.91.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
