[package]
name = "hdl-simulation-protocol"
version = "0.1.0"
authors = ["xq-Tec <info@xq-tec.com>"]
description = "Communication protocol to control HDL simulations and subscribe to simulation events"
edition = "2024"
license = "MIT"
repository = "https://github.com/xq-tec/hdl-simulation-protocol"
rust-version = "1.91.0"

[dependencies]
compact_str = { version = "0.9", features = ["serde"] }
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }

[workspace.lints.rust]
# more lints can be found in [workspace.lints.clippy]

unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

####################################################################################################
# Lints that should be enabled from time to time to check if some cleaning up is needed.
####################################################################################################

unused_crate_dependencies = "allow"

####################################################################################################
# Lints that are common to be globally overridden depending on the project's state or type
####################################################################################################

# Override these lints in your project until you plan to release your project to the public
# They can be very noisy during development
missing_docs = "warn"
dead_code = "warn"

####################################################################################################
# Maintenance lints that are generally overridden, but can be used temporarily for clean-up and
# maintenance
####################################################################################################

# generally too eager and suggests too big data types but helps to see whether there are missed
# opportunities
# missing_copy_implementations = "warn"

####################################################################################################
# Lints that should only be overridden for a small scope with a comment explaining the exception
####################################################################################################

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
keyword_idents = { level = "warn", priority = -1 }
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
non_ascii_idents = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# more lints can be found in [workspace.lints.rust]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# These lints don't always make the code clearer, and sometimes even make it worse
bool_to_int_with_if = "allow"
checked_conversions = "allow"
enum_glob_use = "allow"
new_without_default = "allow"
redundant_else = "allow"
struct_field_names = "allow"

####################################################################################################
# Lints that are common to be globally overridden depending on the project's state or type
####################################################################################################

# Override these lints in your project until you plan to release your project to the public
# They can be very noisy during development
missing_panics_doc = "warn"
missing_errors_doc = "warn"

# disable these lints until proper error handling has been implemented in your project
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unwrap_in_result = "warn"
panic_in_result_fn = "warn"

# libraries should not write to stdout/stderr in general, but use a proper logging mechanism
# consider disabling these lints while your crate is still in development and for command line
# application tools
print_stderr = "warn"
print_stdout = "warn"

needless_borrowed_reference = "warn"

####################################################################################################
# Maintenance lints that are generally overridden, but can be used temporarily for clean-up and
# maintenance
####################################################################################################

# too many false positives but temporarily useful
shadow_unrelated = "warn"

####################################################################################################
# Lints that should only be overridden for a small scope with a comment explaining the exception
####################################################################################################

absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
implicit_clone = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
min_ident_chars = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
must_use_candidate = "allow"
mutex_atomic = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"

# Nursery lints

redundant_pub_crate = "allow"

# too many false positives
significant_drop_tightening = "allow"

# too many false positives and often decreases readability
option_if_let_else = "allow"
